--- a/package.json
+++ b/package.json
@@ -19,26 +19,34 @@
   },
   "scripts": {
     "start": "electron-forge start",
+    "start:debug": "cross-env DEBUG=true electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "postinstall": "electron-builder install-app-deps",
     "app:dist": "electron-builder"
   },
   "dependencies": {
+    "@fastify/express": "^2.0.2",
+    "@fastify/middie": "^8.0.0",
     "@fastify/static": "^6.5.0",
     "@reforged/maker-appimage": "^1.2.1",
     "bns": "^0.15.0",
     "bs58": "^5.0.0",
     "cids": "^1.1.9",
+    "cross-env": "^7.0.3",
     "daisyui": "^2.24.0",
     "electron-forge-maker-nsis": "^23.4.0",
     "electron-store": "^8.1.0",
     "electron-unhandled": "^4.0.1",
     "fastify": "^4.5.2",
+    "hnsd.js": "0.0.4",
     "ipfs": "^0.63.5",
     "mime": "^3.0.0",
     "multiformats": "^9.7.1",
+    "node-fetch": "^3.2.10",
     "pino": "^8.4.2",
+    "playdoh": "https://github.com/angrymouse/playdoh",
+    "source-map-support": "^0.5.21",
     "undici": "^5.10.0",
     "yauzl": "^2.10.0"
   },
@@ -53,7 +61,8 @@
         "icon": "build/icon.ico",
         "name": "Elymus"
       },
-      "makers": [{
+      "makers": [
+        {
           "name": "@electron-forge/maker-squirrel",
           "config": {
             "asar": false,
